@@ -30,11 +30,11 @@ subdir := csu
 routines = init-first libc-start $(libc-init) sysdep version check_fds
 csu-dummies = $(filter-out $(start-installed-name),crt1.o Mcrt1.o)
 extra-objs = start.o gmon-start.o \
-	     $(start-installed-name) g$(start-installed-name) \
+	     $(start-installed-name) g$(start-installed-name) b$(start-installed-name) \
 	     $(csu-dummies)
 omit-deps = $(patsubst %.o,%,$(start-installed-name) g$(start-installed-name) \
-		             $(csu-dummies))
-install-lib = $(start-installed-name) g$(start-installed-name) \
+			      b$(start-installed-name) $(csu-dummies))
+install-lib = $(start-installed-name) g$(start-installed-name) b$(start-installed-name) \
 	      $(csu-dummies)
 distribute = initfini.c gmon-start.c start.c defs.awk munch.awk \
 	     abi-note.S init.c munch-tmpl.c
@@ -129,6 +129,9 @@ ifeq (yes,$(elf))
 # the kernel ABI the binaries linked with this library will require.
 $(objpfx)$(start-installed-name): $(objpfx)start.o $(objpfx)abi-note.o \
 				  $(objpfx)init.o
+	$(link-relocatable)
+$(objpfx)b$(start-installed-name): $(objpfx)start.ob $(objpfx)abi-note.ob \
+				  $(objpfx)init.ob
 	$(link-relocatable)
 else
 # The startfile is installed under different names, so we just call our
