@@ -42,7 +42,7 @@
 
 # define RUN_HOOK(NAME, ARGS) \
 do {									   \
-  void *const *ptr;							   \
+  void (*const *ptr) (void);						   \
   for (ptr = symbol_set_first_element (NAME);				   \
        ! symbol_set_end_p (NAME, ptr); ++ptr)				   \
     (*(__##NAME##_hook_function_t *) *ptr) ARGS;			   \
